--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Linky
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_DEBUG=false
+APP_TIMEZONE=Asia/Tehran
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -27,7 +27,7 @@ DB_CONNECTION=sqlite
 # DB_PASSWORD=
 
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
+SESSION_LIFETIME=4320
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
@@ -54,11 +54,3 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
-VITE_APP_NAME="${APP_NAME}"
